login required decorater

--- a/web/templates/success.html
+++ b/web/templates/success.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
 <h1>TRANSACTION SUCCESSFUL</h1>
+<br />
+<a href="{{url_for('home')}}">Home</a>
 {% endblock %}
