--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -12,6 +12,15 @@
       <a href="{{ url_for('import_api') }}">
         <button type="button" class="btn btn-primary">Import Data</button>
       </a>
+      {% if current_user.is_authenticated %}
+      <a href="{{ url_for('logout') }}">
+        <button type="button" class="btn btn-danger">Logout</button>
+      </a>
+      {% else %}
+      <a href="{{ url_for('login') }}">
+        <button type="button" class="btn btn-success">Login</button>
+      </a>
+      {% endif %}
     </div>
   </div>
 </div>
