--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -40,12 +40,13 @@
     
 <main class="form-signin">
     <h3>Library Management System</h3>
+<hr/>
     {% if error %}
         <h4>Invalid credentials</h4>
         <a href="{{ url_for('login') }}">Click here to login again</a>
         <a href="{{ url_for('home') }}">Home</a>
     {% else %}
-  <form action="{{ url_for('login') }}" method="POST">
+  <form method="POST">
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
     <div class="form-floating">
